--- a/Ejercicios Programacion/UT05/EJE0505 - Ficheros 2 PAIR PROGRAMING/EJE0505 Ficheros 2 PAIRPROGRAMING/EJE - 2/EJE - 2.csproj
+++ b/Ejercicios Programacion/UT05/EJE0505 - Ficheros 2 PAIR PROGRAMING/EJE0505 Ficheros 2 PAIRPROGRAMING/EJE - 2/EJE - 2.csproj
@@ -8,4 +8,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Content Include="bin\Debug\net6.0\Pueba.txt" />
+  </ItemGroup>
+
 </Project>
