--- a/Ejercicios Programacion/UT05/EJE0505 - Ficheros 2 PAIR PROGRAMING/EJE0505 Ficheros 2 PAIRPROGRAMING/EJE 3/EJE 3.csproj
+++ b/Ejercicios Programacion/UT05/EJE0505 - Ficheros 2 PAIR PROGRAMING/EJE0505 Ficheros 2 PAIRPROGRAMING/EJE 3/EJE 3.csproj
@@ -3,13 +3,9 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
-    <RootNamespace>EJE___2</RootNamespace>
+    <RootNamespace>EJE_3</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-
-  <ItemGroup>
-    <Content Include="bin\Debug\net6.0\Pueba.txt" />
-  </ItemGroup>
 
 </Project>
