--- a/Ejercicios Programacion/UT07/EJE0701–Razor/EJER/EJER.csproj
+++ b/Ejercicios Programacion/UT07/EJE0701–Razor/EJER/EJER.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Pages\Portada.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Content Remove="wwwroot\img\Fondo.jpg" />
     <Content Remove="wwwroot\img\R.jpg" />
   </ItemGroup>
