--- a/Ejercicios Programacion/UT07/EJE0701–Razor/EJER/EJER.csproj
+++ b/Ejercicios Programacion/UT07/EJE0701–Razor/EJER/EJER.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="wwwroot\NewFolder\**" />
+    <Content Remove="wwwroot\NewFolder\**" />
+    <EmbeddedResource Remove="wwwroot\NewFolder\**" />
+    <None Remove="wwwroot\NewFolder\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Remove="Pages\Portada.cs" />
   </ItemGroup>
 
